--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -1,6 +1,6 @@
 - name: Michael Nieling
   email: m@ocupop.com
-  role: Founder, Creative Director
+  role: Founder & Creative Director
   preferred_title: Chief Mathlete
   what_you_want_to_be_when_you_grow_up: Soccer coach and artisanal dog walker
   catch_phrase: Fuck No. Shit Yeah!
@@ -50,7 +50,7 @@
     of every exhilarating moment.</p>
 - name: Tom Beck
   email: t@ocupop.com
-  role: Technical Director
+  role: Chief Technical Officer
   preferred_title: Hey You!
   what_you_want_to_be_when_you_grow_up: Older
   catch_phrase:
@@ -110,7 +110,7 @@
   bio_html:
 - name: Chris Walker
   email: c@ocupop.com
-  role: Art Director, Designer
+  role: Art Director & Designer
   preferred_title: Wire Manager
   what_you_want_to_be_when_you_grow_up: Quieter
   catch_phrase: One more?
@@ -118,7 +118,7 @@
   bio_html:
 - name: Jenny Vanderheiden
   email: jenny@ocupop.com
-  role: Art Director, Designer
+  role: Art Director & Designer
   preferred_title: Office Shaman
   what_you_want_to_be_when_you_grow_up: Traveling Artist
   catch_phrase: It's like magic!
@@ -206,7 +206,7 @@
   bio_html:
 - name: Kaylee Bird
   email: kaylee@ocupop.com
-  role: Junior Designer
+  role: Designer
   preferred_title: Puter Drawer
   what_you_want_to_be_when_you_grow_up: Big and strong
   catch_phrase: I don't fib or play
