Updated 2 files via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -30,7 +30,7 @@
   preferred_title: ''
   what_you_want_to_be_when_you_grow_up: ''
   catch_phrase: ''
-  image: /uploads/peter.jpeg
+  image: /uploads/peter.jpg
   bio_html: >-
     <p>Peter Lubbers fuses operational expertise with a deep insight into
     critical user journeys and business strategy. As a Developer Relations
