team api updates

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -2,7 +2,7 @@
 title: Ocupop
 email: dev@ocupop.com
 description: 'A small super-powered creative agency with zero awards'
-url: ""
+url: "https://ocupop.com"
 permalink: pretty
 analytics_code: UA-20780270-1
 analytics_ga4_code: G-TBTWG6ZXWZ
