Updated 1 file via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -128,7 +128,7 @@
   email: nate@ocupop.com
   role: Developer
   preferred_title: Sport/Champ/Kiddo
-  what_you_want_to_be_when_you_grow_up: Heavy weight champion
+  what_you_want_to_be_when_you_grow_up: Like 2 inches taller
   catch_phrase: Did you know this song is about his stepdad?
   image: /uploads/ocupop-about-nate.jpg
   bio_html:
