Updated 1 file via CloudCannon.

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -65,3 +65,10 @@ project_statuses:
   - draft
   - private
   - featured
+  
+defaults:
+  -
+    scope:
+      path: 'src/estimates/*'
+    values:
+      sitemap: false
