--- a/src/_config.yml
+++ b/src/_config.yml
@@ -69,6 +69,6 @@ project_statuses:
 defaults:
   -
     scope:
-      path: 'src/estimates/*'
+      path: '/estimates/*'
     values:
       sitemap: false
