Updated 1 file via CloudCannon.

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -69,6 +69,6 @@ project_statuses:
 defaults:
   -
     scope:
-      path: '/estimates/*'
+      path: estimates/**
     values:
       sitemap: false
