Updated 2 files via CloudCannon.

--- a/src/_data/staff.yml
+++ b/src/_data/staff.yml
@@ -232,3 +232,10 @@
   what_you_want_to_be_when_you_grow_up: Endearingly inappropriate.
   catch_phrase: I gots to do what I gots to do
   image: /uploads/ocupop-team-paul-stroot.jpg
+- name: Maggie Laughner
+  email: ''
+  role: Senior Designer
+  preferred_title: Resident Collector of Plants
+  what_you_want_to_be_when_you_grow_up: Organized
+  catch_phrase: OK but hear me out...
+  image: /uploads/maggie.jpg
