--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tylermenezes/cognitoforms-react": "^2.1.0",
     "framer-motion": "^11.11.17",
     "lottie-react": "^2.4.0",
     "motion": "^11.11.17",
